fix size buttons and image print on mobile

--- a/styles.css
+++ b/styles.css
@@ -106,22 +106,13 @@ body {
     font-weight: bold;
 }
 
-.option-screen span {
-    width: 50%;
-    font-size: 2rem;
-    margin-right: 1rem;
-}
-
-.option-screen span:hover {
-    color:rgb(180, 57, 48);
-    cursor: pointer;
-    width: 50%;
-    font-size: 2rem;
-    margin-right: 1rem;
+.option-screen button {
+   margin: .6rem 2rem 0 0;
+   font-size: 1rem;
 }
 
 #pick-width, #pick-height {
-    width: 50%;
+    width: 40%;
     display: inline-block;
 }
 
@@ -429,10 +420,13 @@ body {
 @media screen and (max-width: 810px) {
     .content {
         margin-top: 3rem;
+        height: 50rem;
     }
 
     .option-box {
+        background: transparent;
         position: absolute;
+        top: 50%;
         width: 100%;
         height: 20rem;
         border-radius: 10px;
@@ -442,21 +436,47 @@ body {
        display: none;
     }
 
+    .tab {
+        font-size: .8rem;
+    }
+
     .option-content {
         padding: .5rem 1rem;
     }
 
     .option-content label {
-        margin: 0;
-        margin-top: 0.5rem;
+        font-size: 0.8rem;
+        margin: 0.3rem 0;
+    }
+
+    .option-content span {
+        width: 30px;
+        height: 30px;
+        border-radius: 100%;
+        background: grey;
+        font-size: 1.3rem;
+        margin-right: .5rem;
     }
 
     .canvas {
-        margin-top: 19rem;
+        z-index: -1;
         height: 35rem;
         display: block;
         width: 100%;
-        border-radius: 0 0 10px 10px;
+        border-radius: 10px;
         margin-bottom: 5rem;
+    }
+
+    #download {
+        width: 3rem;
+        background: black;
+        color: white;
+        font-weight: 500;
+        border-radius: 5px 0 0 0;
+        margin: 0;
+    }
+
+    #download:hover {
+        background: darkgrey;
     }
 }
